--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,7 +32,6 @@
 
 body{
   font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: bold;
 }
 
 
@@ -47,12 +46,11 @@ header{
   }
 
   h2{
-    font-size: 50px;
-    margin-bottom: 30px;
+    font-size: 40px;
   }
 
   p{
-    font-size: 20px;
+    font-size: 19px;
     line-height: 30px;
     margin-top: 30px;
   }
@@ -71,6 +69,24 @@ header{
 .color-white{
   color: white;
 }
+
+.row{
+  height: 750px;
+  display: flex;
+  align-items: center;
+}
+
+
+.row-reverse{
+  flex-direction: row-reverse;
+}
+
+
+
+.bg-grey{
+  background-color: rgb(246,246,246);
+}
+
 
 .bd-black{
   border: 1px dashed black;
@@ -119,12 +135,7 @@ header{
   background-color: var(--bgcolor-aquamarine);
 }
 
-.row{
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 
 
 /* HEADER */
@@ -198,24 +209,36 @@ header{
 
 /* MAIN */
 
-
-/* discord channels section */
-
-.channels{
+.main-section{
   display: flex;
-  justify-content: center;
-  margin: 150px auto;
+  justify-content: space-between;
 }
 
-.channels-img{
+.main-section img{
   flex-basis: 70%;
 }
 
-.channels-info{
+
+.main-section .info{
   flex-basis: 30%;
 }
 
-/*  */
+.info{
+  padding-top: 30px;
+}
+
+.wave{
+  height: 100px;
+  background-image: url(../img/wave.svg);
+  opacity: 0.17;
+}
+
+.wave-upsidedown{
+  height: 100px;
+  background-image: url(../img/wave.svg);
+  rotate: 0.5turn;
+  opacity: 0.17;
+}
 
 
 
