--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,13 @@
 
 
 
+
 /* GENERICS */
 
-body{
+  body{
   font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
+  font-weight: bold;
+  }
 
   h1{
     font-size: 65px;
@@ -60,67 +61,64 @@ body{
 
   li{
     font-size: 14px;
-    padding: 2px 0;
+    padding: 6px 0;
   }
+
+
 
 /* UTILITIES */
 
-.container{
-  max-width: 1200px;
-  margin: 0 auto;
-}
+  .container{
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 
 
-.color-white{
-  color: white;
-}
+  .color-white{
+    color: white;
+  }
 
-.row{
-  height: 750px;
-  display: flex;
-  align-items: center;
-}
-
-
-.row-reverse{
-  flex-direction: row-reverse;
-}
-
-.wave{
-  height: 100px;
-  background-image: url(../img/wave.svg);
-  opacity: 0.03;
-}
-
-.wave-upsidedown{
-  height: 100px;
-  background-image: url(../img/wave.svg);
-  rotate: 0.5turn;
-  opacity: 0.03;
-}
-
-.ft-color{
-  color: rgb(114,137,218);
-}
-
-.bg-grey{
-  background-color: rgb(246,246,246);
-}
+  .row{
+    height: 750px;
+    display: flex;
+    align-items: center;
+  }
 
 
-.bd-black{
-  border: 1px dashed black;
-}
 
+  .row-reverse{
+    flex-direction: row-reverse;
+  }
+
+  .wave{
+    height: 100px;
+    background-image: url(../img/wave.svg);
+    opacity: 0.03;
+  }
+
+  .wave-upsidedown{
+    height: 100px;
+    background-image: url(../img/wave.svg);
+    rotate: 0.5turn;
+    opacity: 0.03;
+  }
+
+  .ft-color{
+    color: rgb(114,137,218);
+  }
+
+  .bg-grey{
+    background-color: rgb(246,246,246);
+  }
 
 
 
 /* HEADER */
 
-header{
-  height: 615px;
-  background-image: url(../img/jumbo.png);
-  background-size: cover;
+  header{
+    height: 615px;
+    background-image: url(../img/jumbo.png);
+    background-size: cover;
   }
 
   .navbar{
@@ -194,99 +192,118 @@ header{
 
 /* MAIN */
 
-.main-section{
-  display: flex;
-  justify-content: space-between;
-}
+  .main-section{
+    display: flex;
+    justify-content: space-between;
+  }
 
-.main-section img{
-  flex-basis: 70%;
-}
-
-
-.main-section .info{
-  flex-basis: 30%;
-}
-
-.info{
-  padding-top: 30px;
-}
+  .main-section img{
+    flex-basis: 70%;
+  }
 
 
-.bottom-main{
-  height: 1150px;
-}
+  .main-section .info{
+    flex-basis: 30%;
+  }
 
-.technology{
-  padding-top: 150px;
-  text-align: center;
-}
+  .info{
+    padding-top: 30px;
+  }
 
 
-.bottom-actions{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 40px;
-  margin-bottom: 150px;
+  .bottom-main{
+    height: 1150px;
+  }
+
+  .technology{
+    padding-top: 150px;
+    text-align: center;
+  }
+
+
+  .bottom-actions{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 150px;
   }   
 
   .stars{
     height: 45px;
   }
 
-.bottom-download::before{
-  content: '\1F817';
-  margin-right: 10px
-}
+  .bottom-download::before{
+    content: '\1F817';
+    margin-right: 10px
+  }
 
-.bottom-download{
-  width: 200px;
-  background-color: rgb(142,161,225);
-  color: white;
-  border-radius: 25px;
-  margin-top: 30px;
-  padding: 18px 25px;
-}
+  .bottom-download{
+    width: 200px;
+   background-color: rgb(142,161,225);
+    color: white;
+    border-radius: 25px;
+    margin-top: 30px;
+    padding: 18px 25px;
+  }
 
 
 /* FOOTER */
 
-footer{
-  background-color: rgb(35,39,42);
-}
+  footer{
+    height: 570px;
+    background-color: rgb(35,39,42);
+  }
 
-.top-footer{
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid rgb(74,88,130);
-  padding-bottom: 30px;
-}
+/* top footer */
+
+  .top-footer{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgb(74,88,130);
+    padding-bottom: 30px;
+    padding-top: 80px;
+  }
 
 
-.language-select{
-  color: white;
-  margin: 10px 0;
-}
+  .language-select{
+   color: white;
+   margin: 10px 0;
+  }
 
-.ita-lang{
-  height: 15px;
-  margin-right: 2px;
-}
+  .ita-lang{
+    height: 15px;
+    margin-right: 2px;
+  }
 
-.language-select::after{
-  content: '\02C5';
-  color: white;
-  margin-left: 4px;
-}
+  .language-select::after{
+    content: '\02C5';
+    color: white;
+   margin-left: 4px;
+  }
 
-.contacts{
-  flex-basis: 28%;
-  margin: 0 30px;
-}
+  .contacts{
+    flex-basis: 26%;
+    margin: 0 30px;
+  }
 
-.column{
-  flex-basis: 16%;
-  margin: 0 30px;
-}
+  .column{
+    flex-basis: 16%;
+    margin: 0 30px;
+  }
+
+/* bottom footer */
+
+  .bottom-footer{
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .registration{
+    background-color: rgb(142,161,225);
+    border-radius: 25px;
+    padding: 10px;
+  }
